--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,5 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+ /* start code */
