--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,15 @@ img {
 
     /* container */
     .container {
-        width: 88%;
+        width: 92%;
         margin: 0 auto;
         padding: 0 8px;
+    }
+
+    /* cards box */
+    .col {
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
     }
     
 }
