--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,13 @@ img {
 
 /* start code */
 
+/* start bonus */
+
+/* --- BONUS MEDIA QUERY */
+@media screen and (min-width > 768px) and (max-width < 1161px) {
+    
+}
+
 /* --- TABLET --- */
 @media screen and (max-width: 768px) {
 
